added size filter

--- a/settings.json
+++ b/settings.json
@@ -2,8 +2,8 @@
     "location": "Wrocław",
     "priceFrom": 1000,
     "priceTo": 2500,
-    "areaFrom": 25,
-    "areaTo": 40,
+    "sizeFrom": 25,
+    "sizeTo": 40,
     "titleSelector": "#root > div.css-50cyfj > div.css-176aais > form > div:nth-child(5) > div > div.css-14fnihb > div:nth-child(2) > a > div > div > div.css-9nzgu8 > div.css-u2ayx9 > h6",
     "addressAndDateSelector": "#root > div.css-50cyfj > div.css-176aais > form > div:nth-child(5) > div > div.css-14fnihb > div:nth-child(13) > a > div > div > div.css-9nzgu8 > div:nth-child(2) > p.css-p6wsjo-Text.eu5v0x0",
     "sizeSelector": "#root > div.css-50cyfj > div.css-176aais > form > div:nth-child(5) > div > div.css-14fnihb > div:nth-child(13) > a > div > div > div.css-9nzgu8 > div:nth-child(2) > p.css-1bhbxl1-Text.eu5v0x0",
